--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -348,19 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "2.0"
+      "text/plain": "4"
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(np.diag(res))\n"
+    "res = np.asarray([0, 1, .2, 2, 0, 0, .1])\n",
+    "len(res[res > 0])"
    ],
    "metadata": {
     "collapsed": false,
