--- a/plots.ipynb
+++ b/plots.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "N = 20\n",
     "exp = 1\n",
-    "Experiments = [\"SC_0.8\", \"SC_med\", \"SC_very_low\", \"SC_med_w20rounds\"]\n",
+    "Experiments = [\"SC_0.8\", \"SC_med\", \"SC_very_low\", \"SC_very_low_w20rounds\"]\n",
     "\n",
     "for id in Experiments:\n",
     "    disconnections.append(np.load(f\"Stats/disconnections_{id}.npy\"))\n",
